Fixed spacing between suggestive text and link

--- a/css/custom-styles.css
+++ b/css/custom-styles.css
@@ -148,3 +148,7 @@ a
     margin-top:1em;
     margin-bottom: 1em;
 }
+.home-page-btn{
+
+    margin: 0.1em;
+}
